# humanoid-sim

./: .gitignore  README.md  requirements.txt  setup.sh
src/g1_description/: CMakeLists.txt  LICENSE.unitree  package.xml
src/g1_description/scripts/: process_g1_urdf.py
src/humanoid_mimic_bringup/: CMakeLists.txt  package.xml
src/humanoid_mimic_bringup/config/: controllers.yaml  retargeter.yaml
src/humanoid_mimic_bringup/launch/: _machine_profile.py  camera.launch.py  demo.launch.py  sim.launch.py
src/humanoid_mimic_bringup/rviz/: demo.rviz
src/humanoid_mimic_bringup/worlds/: mimic.sdf
src/humanoid_pose_estimator/: package.xml  setup.cfg  setup.py
src/humanoid_pose_estimator/humanoid_pose_estimator/: __init__.py  keypoints.py  pose_estimator_node.py
src/humanoid_retargeter/: package.xml  setup.cfg  setup.py
src/humanoid_retargeter/humanoid_retargeter/: __init__.py  geometric_ik.py  retargeter_node.py
src/humanoid_retargeter/test/: conftest.py  test_geometric_ik.py  test_retargeter_integration.py
