<?xml version="1.0"?>
<package format="3">
  <name>humanoid_pose_estimator</name>
  <version>0.1.0</version>
  <description>
    MediaPipe-based 2D pose estimation fused with the RealSense aligned-depth
    image to produce metric 3D human keypoints in the camera optical frame.
  </description>
  <maintainer email="humanoid-sim@example.com">humanoid-sim</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <!-- Used by ``align_mode='manual'`` to read the depth->color rigid
       transform from the realsense2_camera node.  Optional at runtime
       (only imported in the manual path) but declaring the dep makes
       rosdep install it on Jetson where we need it. -->
  <exec_depend>realsense2_camera_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
